--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kami",
-  "version": "3.8.1",
+  "version": "3.9.0",
   "description": "Um BOT para Discord com foco em ajudar em mesas de RPG online, tendo suas principais funções criar fichas e rolar dados.",
   "main": "index.js",
   "scripts": {
@@ -28,6 +28,8 @@
     "discord.js": "^13.2.0",
     "dotenv": "^10.0.0",
     "es-abstract": "^1.17.7",
+    "express": "^4.17.1",
+    "express-rate-limit": "^5.5.1",
     "glob": "^7.1.6",
     "milliseconds-parser": "^1.0.2",
     "moment-timezone": "^0.5.32",
