--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kami",
-  "version": "4.0.0",
+  "version": "3.9.3",
   "description": "Um BOT para Discord com foco em ajudar em mesas de RPG online, tendo suas principais funções criar fichas e rolar dados.",
   "main": "index.js",
   "scripts": {
@@ -22,20 +22,16 @@
   "author": "Kamikaze_184",
   "license": "CC BY-NC-ND 4.0",
   "dependencies": {
-    "@discordjs/rest": "^0.1.0-canary.0",
     "ascii-table": "0.0.9",
     "axios": "^0.24.0",
     "colors": "^1.4.0",
     "crypto-js": "^4.1.1",
-    "discord-api-types": "^0.24.0",
-    "discord.js": "^13.3.1",
+    "discord.js": "^13.2.0",
     "dotenv": "^10.0.0",
     "es-abstract": "^1.17.7",
-    "express": "^4.17.1",
-    "express-rate-limit": "^5.5.1",
-    "fast-glob": "^3.2.7",
-    "luxon": "^2.1.1",
+    "glob": "^7.1.6",
     "milliseconds-parser": "^1.0.2",
+    "moment-timezone": "^0.5.32",
     "node-schedule": "^2.0.0",
     "os-utils": "0.0.14",
     "pg": "^8.6.0",
