--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kami",
-  "version": "4.2.11",
+  "version": "4.3.0",
   "description": "Um BOT para Discord com foco em ajudar em mesas de RPG online, tendo suas principais funções criar fichas e rolar dados.",
   "main": "index.js",
   "scripts": {
@@ -22,6 +22,7 @@
   "author": "Kamikaze_184",
   "license": "CC BY-NC-ND 4.0",
   "dependencies": {
+    "@discordjs/builders": "^0.12.0",
     "@discordjs/rest": "^0.1.0-canary.0",
     "ascii-table": "0.0.9",
     "axios": "^0.24.0",
@@ -45,7 +46,7 @@
     "string-similarity": "^4.0.4"
   },
   "engines": {
-    "node": "16.6.1",
-    "npm": "7.24.2"
+    "node": "16.13.2",
+    "npm": "8.1.2"
   }
 }
