--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "kami",
-  "version": "4.7.10",
+  "version": "4.7.11",
   "description": "Um BOT para Discord com foco em ajudar em mesas de RPG online, tendo suas principais funções criar fichas e rolar dados.",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "node index.js --full",
+    "apiMode": "node index.js --api",
+    "botMode": "node index.js --bot",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
