--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "kami",
-  "version": "4.9.3",
+  "version": "4.10.0",
   "description": "Um BOT para Discord com foco em ajudar em mesas de RPG online, tendo suas principais funções criar fichas e rolar dados.",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js --full",
+    "start": "nodemon",
     "apiMode": "node index.js --api",
     "botMode": "node index.js --bot",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -30,12 +30,13 @@
     "colors": "^1.4.0",
     "crypto-js": "^4.1.1",
     "discord-api-types": "^0.24.0",
-    "discord.js": "^14.0.0-dev.1656936300-f6db285",
+    "discord.js": "^14.0.2",
     "dotenv": "^10.0.0",
     "es-abstract": "^1.17.7",
     "express": "^4.17.1",
     "express-rate-limit": "^5.5.1",
     "fast-glob": "^3.2.7",
+    "kami-lru-cache": "github:alanfilho184/kami-lru-cache",
     "luxon": "^2.1.1",
     "milliseconds-parser": "^1.0.2",
     "node-schedule": "^2.0.0",
@@ -44,10 +45,14 @@
     "pidusage": "^2.0.21",
     "roll": "^1.3.1",
     "sequelize": "^6.6.4",
+    "socket.io": "^4.5.1",
     "string-similarity": "^4.0.4"
   },
   "engines": {
     "node": "^16.15.1",
     "npm": "^8.1.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.19"
   }
 }
